fix z-index

--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -113,6 +113,7 @@
 			}
 			#menu-top ul#module-list{
 				display: none;
+				z-index: 1;
 				position: absolute;
 				right: 0;
 				top: 15px;
